@@ -1,10 +1,13 @@
 TODO
 ====
 1. Testy.
-3. Add support for pattern output in image. Image::Checkboard
-4.
+4. More patterns.
+5.
 
 Applied
 =======
 2. V testu 04-run.t u helpu nesmi byt zadratovany adresar.
 OK [20220106] skim
+
+3. Add support for pattern output in image. Image::Checkboard
+OK [20250218] skim
