@@ -58,11 +58,12 @@ sub help {
 		$script =~ s/\\/\//msg;
 	}
 	my $help = <<"END";
-Usage: $script [-h] [-i input_dir] [-s size] [-v]
+Usage: $script [-h] [-i input_dir] [-p pattern] [-s size] [-v]
 	[--version] output_file
 
 	-h		Print help.
 	-i input_dir	Input directory with images (default value is nothing).
+	-p pattern	Pattern (checkerboard).
 	-s size		Size (default value is 1920x1080).
 	-v		Verbose mode.
 	--version	Print version.
